<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="server_port"
        android:title="@string/settings_port"
        android:summary="@string/settings_port_summary"
        android:defaultValue="8080" />
    <EditTextPreference
        android:key="api_server_url"
        android:title="@string/settings_api_server"
        android:defaultValue="https://api.yitian.shop"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:key="pref_pin_code"
        android:title="@string/settings_pin_code"
        android:summary="@string/settings_pin_code_summary"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="" />
    <SwitchPreferenceCompat
        android:key="pref_biometric_enabled"
        android:title="@string/settings_biometric"
        android:summary="@string/settings_biometric_summary"
        android:defaultValue="true" />
    <SwitchPreferenceCompat
        android:key="pref_auth_token_enabled"
        android:title="@string/settings_auth_token"
        android:summary="@string/settings_auth_token_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="theme"
        android:title="@string/settings_theme"
        android:entries="@array/settings_theme_entries"
        android:entryValues="@array/settings_theme_values"
        android:defaultValue="dark" />
    <SwitchPreferenceCompat
        android:key="haptic"
        android:title="@string/settings_haptic"
        android:defaultValue="true" />
    <Preference
        android:key="logout"
        android:title="@string/settings_logout" />
</PreferenceScreen>
